add pt error to plant output

--- a/Plant_ert_rtw/html/pages/Plant_interface.html
+++ b/Plant_ert_rtw/html/pages/Plant_interface.html
@@ -337,6 +337,24 @@ real_T
 </td>
 
 </tr>
+<tr class="even">
+<td width="42%" align="left" valign="top">
+<a href="javascript: void(0)" onclick="postParentWindowMessage({message:'legacyMCall', expr:'coder.internal.code2model(\'starshotsim_dev:1875\')'})"  name="code2model" class="code2model">&lt;S1&gt;/pt_error</a>
+</td>
+<td width="26%" align="left" valign="top">
+<i>
+Defined externally
+</i>
+
+</td>
+<td width="21%" align="left" valign="top">
+real_T
+</td>
+<td width="10%" align="right" valign="top">
+1
+</td>
+
+</tr>
 
 </table>
 <h3>
